generate search tags

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
     <div class="container-fluid">
         <div class="row">
         <div class="col-md-9">
-            <h1>Go Gif It!</h1>
+            <h1>Giphy RXN</h1>
             <div id="gifs-appear-here"></div>
         </div>
 
         <div class="col-md-3 search-col">
             <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search">
+                <input id="search-term" type="text" class="form-control" placeholder="Search">
                 <span class="input-group-btn">
-                    <button class="btn btn-default" type="button">Go</button>
+                    <button id="go" class="btn btn-default" type="button">Go</button>
                 </span>
             </div>
             <!-- /input-group -->
