--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
         <div class="row">
         <div class="col-md-9">
             <h1>Giphy RXN</h1>
-            <h3>Click to see the magic</h3>
+            <h3>Click a gif to start and stop it</h3>
             <div id="gifs-appear-here"></div>
         </div>
 
         <div class="col-md-3 search-col">
+
             <div class="input-group">
                 <input id="search-term" type="text" class="form-control" placeholder="Search">
                 <span class="input-group-btn">
